syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

import "google/protobuf/wrappers.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  // service stream
  rpc StreamingFromService (ExampleRequest) returns (stream ExampleResponse);
  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);
  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message ExampleRequest{
    int32 pageIndex = 1;
    int32 pageSize = 2;
    bool isDescending = 3;
}

message ExampleResponse{
   google.protobuf.Int32Value age =1 ; 
}
